--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -117,7 +117,7 @@ ar:
           answer: 'نحن ننظر بشكل دائم إذا ما كانت المعلومات في كلارات لاتزال معاصرة. لأنه بهذه الطريقة  فقط يمكننا مساعدة الأطفال والشباب والأسر واللاجئين. فإذا لم تكن المعلومات لاتزال صحيحة فإنه يتم  تحديثها أي أننا نستبدلها. '
           question: هل المعلومات في كلارات حديثة؟
         question_7:
-          answer: بعض العروض في <b>كلارات الأسرة</b> و<b>كلارات اللاجئين</b> يمكن الاستفادة منها من  كل الأنحاء. سواء كنت تسكن في أي مكان ستجد العديد من العروض والتي من خلالها يساعدك شخص عن طريق الهاتف أو الإنترنت؛ أي عن طريق الشات أو المنتديات. ولكن العديد من العروض يمكنك الاستفادة منها فقط حيت تسكن. في <b>كلارات اللاجئين</b> تجد قريبا عروضا للعديد من المدن الكبيرة في ألمانيا. وهي حاليا برلين، وكولونيا ودوسلدورف. أما في <b>كلارات الأسرة</b> فقد بدأنا ببرلين. هنا توجد بالفعل عروض كثيرة. ولكننا نجمع عروضا أكثر. وقريبا سيكون لمدن كبرى أخرى في ألمانيا.
+          answer: بعض العروض في <b>كلارات الأسرة</b> و<b>كلارات اللاجئين</b> يمكن الاستفادة منها من  كل الأنحاء. سواء كنت تسكن في أي مكان ستجد العديد من العروض والتي من خلالها يساعدك شخص عن طريق الهاتف أو الإنترنت؛ أي عن طريق الشات أو المنتديات. ولكن العديد من العروض يمكنك الاستفادة منها فقط حيت تسكن. في <b>كلارات اللاجئين</b> تجد قريبا عروضا للعديد من المدن الكبيرة في ألمانيا. وهي حاليا برلين، هامبورغ، ميونخ، دورتموند، دوسلدورف، كولن، نورينبيرغ، وشتوتغارت. أما في <b>كلارات الأسرة</b> فقد بدأنا ببرلين. هنا توجد بالفعل عروض كثيرة. ولكننا نجمع عروضاً أكثر. وقريباً سيكون لمدن كبرى أخرى في ألمانيا.
           question: هل توجد كلارات لألمانيا كلها؟
         question_8:
           answer: كلارات تعرض لك المساعدة المتاحة بالقرب منك. فإنك تجد كل العروض مجمعة وبشكل عام. علاوة على ذلك فنحن نقول لك ما يجب عليك أن تفعل بالضبط لكي تحصل على المساعدة. ونحن نكتب دائما بلغة سهلة ويمكن للجميع ان يفهمها. حتى يتمكن الناس الذين لا يجيدون الألمانية من العثور على المساعدة؛ كما يمكنك أيضا أن تقرأ العروض بلغات أخرى عديدة. إذا أردت أن تعرف أكثر عن هذه اللغات؛ إضغط هنا %{ref_to_how_many_languages}.
@@ -580,6 +580,11 @@ ar:
         xxx: 
         zho: Zho
         zza: Zza
+      residency_status:
+        before_the_asylum_decision: 
+        with_a_residence_permit: 
+        with_deportation_decision: 
+        with_temporary_suspension_of_deportation: 
       section:
         family: Family
         refugees: Refugees
@@ -661,6 +666,7 @@ ar:
         approach: كيف تقدم المساعدة؟
         gender: النوع
         language: اللغة
+        residency_status: 
         sort: رتب حسب
         target_audience: المساعدة لمن؟
       option_any: سواء
@@ -668,6 +674,7 @@ ar:
         back: للخلف
         gap: "..."
         next: لاحقا
+      reset_label: 
       sort:
         nearby: بالقرب
         relevance: أفضل النتائج
@@ -768,8 +775,7 @@ ar:
         fra: لغة فرنسية - Français
         fuf: Pular - Pular
         ful: Ful - Fulfulde
-        gej: 
-        gen: جين  - Mina
+        gej: جين - Mina
         geo: الجورجية - ქართული
         hau: لغة هوسية - Hausanci
         hbs: لغة مونتنغرية - Crnogorski jezik / Црногорски језик
@@ -842,12 +848,54 @@ ar:
         personal: ذاتيا
         portal: قائمة العناوين
   layouts:
+    modal_create:
+      js:
+        erb:
+          success: تم إدخال الإيميل بنجاح!
     partials:
       banner:
         teaser:
           link: هنا يمكنك معرفة المزيد
           refugees: قريبا سيكون هناك عروضا للأجئين أيضا
           text: clarat.org يتم إنشائها
+      callout:
+        callout:
+          callout:
+            how:
+              text: 
+            refugees:
+              how:
+                heading: 
+                text: 
+              who:
+                text: 
+            what:
+              heading: 
+              text: 
+            who:
+              heading: 
+          how:
+            family:
+              heading: 
+              text: 
+            refugees:
+              heading: 
+              text: 
+          what:
+            family:
+              heading: 
+              text: 
+            refugees:
+              heading: 
+              text: 
+          who:
+            family:
+              heading: 
+              text: 
+            heading: 
+            refugees:
+              heading: 
+              text: 
       footer:
         about: معلومات عنا
         blog: مدونة
@@ -863,12 +911,32 @@ ar:
           anchor: جوجل بلس
           href: https://plus.google.com/110429028641743127592/about
         impressum: هيئة التحرير
+        plus: clarat plus
         privacy: إرشادات حماية البيانات الشخصية
         tos: إرشادات قانونية
         twitter:
           anchor: تويتر
           href: https://twitter.com/claratpunktorg
-        plus: clarat plus
+      header:
+        about: 
+        blog: 
+        contact: 
+        faq: 
+        languages:
+          ar: 
+          de: 
+          en: 
+          fa: 
+          fr: 
+          pl: 
+          ru: 
+          tr: 
+      hero:
+        claim:
+          family: مساعدة للأطفال والمراهقين و الأسرة
+        hero:
+          button_label: 
+          logline: 
       modal:
         beta_modal:
           link: ارسل لنا ببساطة رسالة بريد إليكتروني
@@ -878,21 +946,14 @@ ar:
             قريبا سوف نقوم بتجميع عروض مساعدات أيضا لمدن أخري. مساعدتك تسرنا:
             هل لاحظت شيئا ما؛ وترى أنه يمكننا تحسينه؟
             أو شيئا غير صحيح؟ إذن
-        popup:
-          button: نعم؛ من فضلك
-          email_placeholder: عنوان البريد الإليكتروني *
-          footer: إسمك وعنوان الإيميل الخاص بك سوف يستخدمان فقط للتواصل معك. ولن يتم إشراكك في مجموعة إخباريةولن يتم إعطاء إيميلك لطرف ثالث.
-          headline: ٢٠ يورو مقابل إبداء رأيك فينا.
-          message: Ich möchte an der Umfrage teilnehmen
-          name_placeholder: الإسم *
-          text: قل لنا ما الذي يمكننا تحسينه. أو ما الذي يعجبك. يسعدنا التواصل معك تليفونياً. هل يمكن أن نرسل لك إيميل بالتفاصيل؟
+        more_information_overlay: 
+        send: 
         unavailable_location_modal: |
           لموقعك يوجد في كلارات حاليا عروض مساعدات عن طريق التليفون أو الإنترنت فقط
           هذا يعني أن شخصا يساعدك عن طريق التليفون أو الإنترنت
           مثلا عن طريق اللإيميل أو عن طريق الدردشة
           سوف نخبرك بكل سرور بمجرد أن يكون في كلارات مساعدات بالقرب منك
           لذلك سجل عنوان بريدك الإليكتروني هنا
-        send: 
       nav_lang:
         legal_title: في كلارات، لا يمكن قراءة النص القانوني إلا باللغة الألمانية.
         title: |-
@@ -930,6 +991,8 @@ ar:
               family: إلى <span class="top-bar__emphasis">كلارات اللاجئين</span> تحول
               refugees: إلى <span class="top-bar__emphasis">كلارات الأسرة</span> تحول
         title: ترجمة فورية
+    widget:
+      category_headline: 
   offer:
     stamp:
       target_audience:
@@ -965,9 +1028,15 @@ ar:
             female: فقط للبنات والسيدات
             girls_only: فقط للبنات والسيدات
             male: فقط للصبيان والرجال
+          residency_status:
+            before_the_asylum_decision: في قضية اللجوء
+            with_a_residence_permit: بتصريح إقامة
+            with_deportation_decision: بقرار الترحيل
+            with_temporary_suspension_of_deportation: بإذن إقامة مؤقت (دولدونج)
           target_audience:
             children: للأطفال والشباب
             family_children: للأطفال والشبان
+            family_everyone: 
             family_nuclear_family: للأسر
             family_parents: للآباء
             family_parents_to_be: لمن سوف يصيرون والدين
@@ -976,6 +1045,12 @@ ar:
             nuclear_family: للأسر
             parents: للآباء
             pregnant_woman: للحوامل
+            refugees_children: للأجئين الأطفال
+            refugees_families: للأسرة اللاجئة
+            refugees_general: للاجئين
+            refugees_parents: للاجئين من الآباء
+            refugees_parents_to_be: للاجئين الذين سيصيرون قريباً آباء
+            refugees_uf: للاجئين غير المصحوبين
             relatives: للمعارف والأقارب
       map_sidebar:
         map_output_searchresults: إظهار بطاقة نتائج البحث
@@ -1098,8 +1173,6 @@ ar:
         أخصائية إجتماعية. هذا يعني أنها تعرف الكثير عن المجتمع. فهي تلاحظ بسرعة ما هو مهم. في كلارات هي تعمل مع فريق البحث وتقرر أي العروض يصلح ليكون ضمن عروض كلارات. أغنيتها المفضلة هي La
         Prima Estate ل. Erlend Oye.
       andrea: درست إدارة متعددة الثقافات. هذه يعني أنها تعرف عن الإقتصاد والثقافة. هي تعمل بدقة شديدة. في كلارات هي عضوة بالفريق البحثي وهي تعتني بالشكل العام لكلارات فاميلي. أغنيتها المفضلة هي Work Me ل. The Black Keys.
-      anja: هي خبيرة إقتصادية ومهندسة. إنها قادرة على التفكير المنطقي السريع. في كلارات هي عضوة بالفريق البحثي. وهي تتأكد من جودة العمل. أغنيتها المفضلة هي Where is my mind ل den Pixies.
-      ann-sophie: درست دراسات ثقافية وإجتماعية. هي على دراية كبيرة بموضوع الهجرة. يمكنها ترتيب وفهم الأشياء. في كلارات هي عضوة بفريق البحث. أغنيتها المفضلة هي Papertrails ل. Darkside.
       anna: هي متخصصة في علم اللغة. هذا يعني أنها تعرف الكثير عن اللغات المختلفة. وهي على معرفة جيدة بالآداب. يمكنها فهم الأشياء المعقدة جيداً. في كلارات هي عضوة في الفريق البحثي. أغنيتها المفضلة هي 1009 ل.Bonobo.
       anne: درست إقتصاد وعلاقات عامة. هي سريعة جدا في التفكير المنطقي. في كلارات هي المديرة. وهي تتابع عمل الفريق بأكمله وتقوم بتنظيم كل شئ. أغنيتها المفضلة هي Denken Sie Groß  ل.Deichkind.
       astrid: خبيرة سياسية. هذا يعني أنها تعرف الكثير عن السياسة والمجتمع.  هي دائما مرحة وتعكس هذا على الآخرين. هي عضوة في فريق البحث لدى كلارات. أغنيتها المفضلة هي You Got Me ل. The Roots.
@@ -1139,7 +1212,6 @@ ar:
       lisa: مصممة إبتكارات. هي تحب التطوير عن طريق حلول أخرى مبدعة. كما يمكنها الرسم جيداً. في كلارات هي عضوة في الفريق البحثي وتتواصل مع مستخدمي الصفحة. وتبحث لتكتشف من يستخدم كلارات. أغنيتها المفضلة هي Resolution ل.Matt Corby.
       magdalena: 'درست مجالات مختلفة من دراسات أمريكا اللاتينية. هذا يعني أنها تعرف الكثير عن الثقافة والسياسة في أمريكا اللاتينية. هي قادرة على التخطيط والتنظيم في العمل. في كلارات هي عضوة بفريق البحث. أغنيتها المفضلة هي Summer Breeze ل. CocoRosie.  '
       marcus: مصمم ويب. هذا يعني أنه يستطيع برمجة صفحات الإنترنت والشكل العام للصفحة. هو أيضا واضع خطط جيد. في كلارات هو عضو بفريق الآي تي أو تكنولوجيا المعلومات. ويعتني بجعل صفحات الإنترنت الخاصة بنا تبدو في شكل جيد. أغنيته المفضلة هي Hysteria ل. MUSE
-      marie: باحثة في مجال السلام والصراع. هذا يعني أنها تعرف الكثير عن الصراعات والحروب. هي قادرة على تجميع المعلومات وترتيبها بشكل سريع. في كلارات هي عضوة بفريق البحث. أغنيتها المفضلة هي Move On Up ل. Curtis Mayfield..
       meta_description: هذا هو فريق عمل قائمة المساعدات في ألمانيا. أكثر من ٤٠ موظف يعملون يومياً؛ لكي تجد المساعدات بسهولة.
       michaela: درست نظم معلومات اقتصادية. يمكنها أن تحمس الناس لشئ ما. وهي تعرف وسائل الإتصال الحديثة جيداً. في كلارات هي عضوة في الفريق البحثي. وتعتني بأن صفحتنا على الإنترنت تعمل بشكل جيد. أغنيتها المفضلة هي Digital Love ل.Daft Punk.
       nahla: 'متخصصة في علم الآثار. تعرف الكثير عن تاريخ البشر. يمكنها العمل جيداً وبسرعة. في كلارات هي عضوة بفريق الترجمة وتقوم بترجمة كلارات إلى اللغة العربية. أغنيتها المفضلة هي نسم علينا الهوى لفيروز. '
@@ -1207,6 +1279,8 @@ ar:
     faq:
       title: أسئلة شائعة
     home:
+      explaination:
+        headline: 
       how:
         heading: كيف تعمل كلارات؟
         text: أكتب المشكلة التي تحتاح مساعدة في حلها, او التي تقلقك. يمكنك أيضا أن تختار من الموضوعات الموجودة لدينا, فتري في الحال كل العروض التي تقدم الدعم بالقرب منك. وكذلك تعرف أيضا, كيف تحصل على المساعدة و بأي  وسيلة إتصال, سواء عن طريق التليفون أو إرسال إيميل أو الذهاب الي عنوان ما
@@ -1307,8 +1381,17 @@ ar:
       intro_second_part: Im Folgenden möchten wir Sie über Art, Umfang und Zweck der Erhebung und Verwendung personenbezogener Daten unterrichten. Sie können diese Unterrichtung jederzeit auf unserer Webseite abrufen. Die clarat gGmbH behält sich Änderungen dieser Datenschutzhinweise vor. Es empfiehlt sich daher, die Datenschutzweise erneut aufzurufen, wenn Sie unsere Webseite nach längerer Zeit wieder besuchen.
       title: Datenschutz
     section_choice:
+      cta:
+        button: 
+        family:
+          text: 
+        refugees:
+          text: 
       meta_description: clarat.org تعرض لك ما هي المساعدات المتاحة في ألمانيا للاطفال والمراهقين والأسر واللاجئين. عبر الانترنت. بالقرب منك.
       meta_title: كلارات توضح | كلارات
+      mission:
+        headline: 
+        text: 
       title: إختر قسم كلارات الذي يخصك
     shared:
       address:
@@ -1331,12 +1414,13 @@ ar:
     impressum: هيئة التحرير
     kontakt: إتصال
     liste: القائمة
-    liste-de-services: قائمة الخدمات
+    liste-de-services: 
     new: جديد
     offers: عروض
     organizations: منظمة
     preview: عرض
     rechtliche-hinweise: إرشادات-قانونية
+    refugees: 
     search_locations: بحث_المواقع
     subscribe: subscribe
     subscriptions: إشتراكات
@@ -1344,6 +1428,11 @@ ar:
     unsubscribe: unsubscribe
     update_requests: طلبات-تحديث
     users: مستخدم
+    widget: 
+    widget-handbook-germany: 
+    widget-hg: 
+    widget-start-with-a-friend: 
+    widget-swaf: 
   shareds:
     forms:
       fill_field: من فضلك إملأ هذه الخانة
@@ -1396,3 +1485,4 @@ ar:
     new:
       button: الرسالة وصلت
       email_placeholder: عنوان البريد الإليكتروني
+      placeholder: 
