--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -722,6 +722,11 @@ pl:
         xxx: 
         zho: Zho
         zza: Zza
+      residency_status:
+        before_the_asylum_decision: 
+        with_a_residence_permit: 
+        with_deportation_decision: 
+        with_temporary_suspension_of_deportation: 
       section:
         family: Family
         refugees: Refugees
@@ -801,6 +806,7 @@ pl:
         approach: W jaki sposób?
         gender: Płeć
         language: Język
+        residency_status: 
         sort: Sortuj według
         target_audience: Pomoc dla kogo?
       option_any: obojętne
@@ -808,6 +814,7 @@ pl:
         back: Wróć
         gap: "..."
         next: Dalej
+      reset_label: 
       sort:
         nearby: W pobliżu
         relevance: Lepszy strzał
@@ -904,8 +911,7 @@ pl:
         fra: Język francuski - Français
         fuf: Pular - Pular
         ful: Ful - Fulfulde
-        gej: 
-        gen: Gen - Mina
+        gej: Gen - Mina
         geo: gruziński - ქართული
         hau: język hausa - Hausa
         hbs: Język czarnogórski - Crnogorski jezik / Црногорски језик
@@ -978,12 +984,54 @@ pl:
         personal: osobiście
         portal: lista adresów
   layouts:
+    modal_create:
+      js:
+        erb:
+          success: 
     partials:
       banner:
         teaser:
           link: Tutaj dowiesz się więcej
           refugees: Wkrótce także oferty dla uchodźców
           text: clarat.org jest właśnie przebudowywany
+      callout:
+        callout:
+          callout:
+            how:
+              text: 
+            refugees:
+              how:
+                heading: 
+                text: 
+              who:
+                text: 
+            what:
+              heading: 
+              text: 
+            who:
+              heading: 
+          how:
+            family:
+              heading: 
+              text: 
+            refugees:
+              heading: 
+              text: 
+          what:
+            family:
+              heading: 
+              text: 
+            refugees:
+              heading: 
+              text: 
+          who:
+            family:
+              heading: 
+              text: 
+            heading: 
+            refugees:
+              heading: 
+              text: 
       footer:
         about: O nas
         blog: Blog
@@ -999,26 +1047,39 @@ pl:
           anchor: Google+
           href: https://plus.google.com/110429028641743127592/about
         impressum: impressum
+        plus: clarat plus
         privacy: Ochrona danych
         tos: Nota prawna
         twitter:
           anchor: Twitter
           href: https://twitter.com/claratpunktorg
-        plus: clarat plus
+      header:
+        about: 
+        blog: 
+        contact: 
+        faq: 
+        languages:
+          ar: عربي
+          de: Deutsch
+          en: English
+          fa: فارسی
+          fr: Français
+          pl: Polski
+          ru: Русский
+          tr: Türkçe
+      hero:
+        claim:
+          family: Oferty wsparcia dla dzieci, młodzieży i rodzin
+        hero:
+          button_label: 
+          logline: 
       modal:
         beta_modal:
           link: po prostu napisz do nas wiadomość
           text: 'Nasza strona internetowa clarat.org jest jeszcze całkiem nowa. Możesz już znaleźć wiele ofert pomocy w Berlinie. Wkrótce zbierzemy też oferty pomocy dla innych miast. Będziemy wdzięczni za pomoc: Zauważyłeś coś, co moglibyśmy zrobić lepiej? Albo coś funkcjonuje nie tak, jak powinno? W takim razie'
-        popup:
-          button: 
-          email_placeholder: adres e-mail *
-          footer: 
-          headline: 
-          message: Ich möchte an der Umfrage teilnehmen
-          name_placeholder: Imię *
-          text: 
-        unavailable_location_modal: Dla Twojej lokalizacji mamy aktualnie w clarat wyłącznie oferty telefoniczne i oferty online. To znaczy, otrzymasz pomoc telefoniczną lub online, na przykład przez e-mail lub za pomocą chatu. Chętnie damy Ci znać, kiedy pojawią się oferty pomocy w Twojej okolicy. W tym celu wpisz adres e-mail.
+        more_information_overlay: 
         send: 
+        unavailable_location_modal: Dla Twojej lokalizacji mamy aktualnie w clarat wyłącznie oferty telefoniczne i oferty online. To znaczy, otrzymasz pomoc telefoniczną lub online, na przykład przez e-mail lub za pomocą chatu. Chętnie damy Ci znać, kiedy pojawią się oferty pomocy w Twojej okolicy. W tym celu wpisz adres e-mail.
       nav_lang:
         legal_title: W klarownym tekście prawnym można czytać po niemiecku.
         title: 
@@ -1053,6 +1114,8 @@ pl:
               family: zmień na <span class="top-bar__emphasis">clarat refugees</span>
               refugees: 'zmień na <span class="top-bar__emphasis">clarat family</span> '
         title: Automatyczne Tłumaczenia!
+    widget:
+      category_headline: 
   offer:
     stamp:
       target_audience:
@@ -1087,9 +1150,15 @@ pl:
             female: tylko dla dziewcząt i kobiet
             girls_only: tylko dla dziewcząt i kobiet
             male: tylko dla chłopców i mężczyzn
+          residency_status:
+            before_the_asylum_decision: w trakcie procedury azylowej
+            with_a_residence_permit: z pozwoleniem na pobyt
+            with_deportation_decision: z zawiadomieniem o deportacji
+            with_temporary_suspension_of_deportation: z pobytem tolerowanym
           target_audience:
             children: dla dzieci i młodzieży
             family_children: dla dzieci i młodzieży
+            family_everyone: 
             family_nuclear_family: dla rodzin
             family_parents: dla rodziców
             family_parents_to_be: dla przyszłych rodziców
@@ -1098,6 +1167,12 @@ pl:
             nuclear_family: dla rodzin
             parents: dla rodziców
             pregnant_woman: Dla kobiet w ciąży
+            refugees_children: dla uchodźców-dzieci
+            refugees_families: dla uchodźców-rodzin
+            refugees_general: dla uchodźców
+            refugees_parents: dla uchodźców-rodziców
+            refugees_parents_to_be: dla zbiegłych przyszłych rodziców
+            refugees_uf: dla niepełnoletnich uchodźców bez opieki
             relatives: dla znajomych i krewnych
       map_sidebar:
         map_output_searchresults: Widok wyników wyszukiwania na mapie
@@ -1214,8 +1289,6 @@ pl:
     about:
       amina: Jest socjologiem. To znaczy, że wie dużo o społeczeństwie. Szybko orientuje się, co jest ważne. W clarat jest w zespole badawczym. Ona decyduje, co znajdzie się w ofertach claratu. Jej ulubionym utworem jest “La Prima Estate” Erlenda Oye.
       andrea: 'Studiowała Zarządzanie Międzykulturowe. Stąd wie tez niemało o gospodarce czy kulturze. Jest bardzo dokładna w swojej pracy. W clarat jest częścią zespołu badawczego. Andrea zabezpiecza jakość naszej pracy. Jej ulubiony utwór to: “Work Me” The Black Keys.'
-      anja: Jest ekologiem i inżynierem. Potrafi szybko i logicznie myśleć. W clarat pracuje w Research-Teamie. Jest gwarancją najwyższej jakości. Jej ulubioną piosenką jest "Where is my mind" grupy Pixies.
-      ann-sophie: 
       anna: Jest filologiem. To znaczy, one wie sporo o językach. Literatura też nie jest jej obca. Potrafi dobrze zrozumieć spokomplikowane zagadnienia. W clarat pracuje w Research-Teamie. Jej ulubioną piosenką jest "1009" grupy Bonobo.
       anne: |-
         Studiowała Gospodarkę i Stosunki Międzynarodowe. Potrafi bardzo szybko logicznie myśleć. W clarat jest szefem.
@@ -1257,7 +1330,6 @@ pl:
       lisa: Jest designerem. To znaczy, że chętnie znajduje nowe, kreatywne rozwiązania i potrafi to dobrze pokazać. W clarat pracuje dla Research-Teamu. Jej ulubionym utworem jest “Another Day” Jamie Lidell.
       magdalena: 
       marcus: Jest webdesignerem. To znaczy, że potrafi programować szatę graficzną stron internetowych. Potrafi też dobrze planować. W clarat jest w zespole IT. Dba o to, aby nasza strona internetowa dobrze wyglądała. Jego ulubionym utworem jest “Hysteria” zespolu Muse.
-      marie: 
       meta_description: 
       michaela: Studiowała informatykę gospodarczą. Potrafi zachwycić innych ludzi. Zna się dobrze na mediach. W clarat pracuje dla Research-Teamu. Troszczy się o to, by nasze strony internetowe dobrze funkcjonowały. Jej ulubionym utworem jest "Digital Love" zespołu Daft Punk.
       nahla: Jest archeologiem. Wie wiele o historii i człowieczeństwie. Potrafi szybko pracować. W clarat pracuje dla zespołu tłumaczeniowego i tłumaczy clarat na arabski. Jej ulubionym utworem jest "Nassam Allina El Hawa" zespołu Fayrouz.
@@ -1325,6 +1397,8 @@ pl:
     faq:
       title: Często zadawane pytania
     home:
+      explaination:
+        headline: 
       how:
         heading: Jak funkcjonuje clarat?
         text: Wpisz, jaki masz problem. Albo co przysparza Ci zmartwień. Lub wybierz z tematów przez nas zaproponowanych. Zaraz wyświetlą się oferty pomocy w twojej okolicy. My wskażemy Ci również, w jaki sposób uzyskasz pomoc. Czyli, czy masz zadzwonić, napisać e-mail, czy udać się we wskazane miejsce.
@@ -1425,8 +1499,17 @@ pl:
       intro_second_part: Im Folgenden möchten wir Sie über Art, Umfang und Zweck der Erhebung und Verwendung personenbezogener Daten unterrichten. Sie können diese Unterrichtung jederzeit auf unserer Webseite abrufen. Die clarat gGmbH behält sich Änderungen dieser Datenschutzhinweise vor. Es empfiehlt sich daher, die Datenschutzweise erneut aufzurufen, wenn Sie unsere Webseite nach längerer Zeit wieder besuchen.
       title: Datenschutz
     section_choice:
+      cta:
+        button: 
+        family:
+          text: 
+        refugees:
+          text: 
       meta_description: 
       meta_title: 
+      mission:
+        headline: 
+        text: 
       title: Wybierz swój clarat-świat
     shared:
       address:
@@ -1443,18 +1526,19 @@ pl:
     definitions: definicje
     emails: e-maile
     faq: często-zadawane-pytania
-    fr: fr
+    fr: 
     haeufige-fragen: często-zadawane-pytania
     home: home
     impressum: impressum
-    kontakt: 
+    kontakt: contact
     liste: Lista
-    liste-de-services: liste-de-services
+    liste-de-services: 
     new: nowe
     offers: oferty
     organizations: organizacje
     preview: podgląd
     rechtliche-hinweise: nota-prawna
+    refugees: 
     search_locations: wyszukaj
     subscribe: subscribe
     subscriptions: subskrypcje
@@ -1462,6 +1546,11 @@ pl:
     unsubscribe: unsubscribe
     update_requests: odśwież
     users: użytkownicy
+    widget: 
+    widget-handbook-germany: 
+    widget-hg: 
+    widget-start-with-a-friend: 
+    widget-swaf: 
   shareds:
     forms:
       fill_field: Proszę wypełnij to pole
@@ -1506,3 +1595,4 @@ pl:
     new:
       button: Wiadomość otrzymana
       email_placeholder: adres e-mail
+      placeholder: 
